--- a/templates/app/respuesta.html.twig
+++ b/templates/app/respuesta.html.twig
@@ -94,8 +94,14 @@
 
               <tr>
                 <td><b>MEDIO DE PAGO</b></td>
-                <td class="right"><img class="tc_min" height="20px" src="{{asset('themeapp/img/icons_cc/visa.png')}}" alt="">
+                <td class="right">
+                 {% if type=='spei' %} 
+                      <img class="tc_min" height="20px" src="{{asset('themeapp/img/icons_cc/spei.png')}}" alt="">
+                  
+                 {% else %}
+                  <img class="tc_min" height="20px" src="{{asset('themeapp/img/icons_cc/visa.png')}}" alt="">
                   <h4 class="text_pines"> ●●●● 4242</h4>
+                  {% endif %}
                 </td>
               </tr>
               <tr>
