add cerrar to dashboard

--- a/templates/app/respuesta.html.twig
+++ b/templates/app/respuesta.html.twig
@@ -24,7 +24,7 @@
         </ul>
         <a href="#!" class="brand-logo">Transacción {{estado}} </a>
         <ul class="right">
-          <li><a href="#"><i class="material-icons">close</i></a></li>
+          <li><a href="{{asset('dashboard/cliente')}}"><i class="material-icons">close</i></a></li>
         </ul>
         <!-- Menu 2 -->
         
