qr volver a dashboard

--- a/templates/app/qr.html.twig
+++ b/templates/app/qr.html.twig
@@ -10,7 +10,7 @@
     <nav>
       <div class="nav-wrapper principal_bg">
         <ul class="left">
-          <li><a href="javascript:window.history.back();"><i class="material-icons">keyboard_backspace</i></a></li>
+          <li><a href="{{asset('dashboard/cliente')}}"><i class="material-icons">keyboard_backspace</i></a></li>
         </ul>
         <a href="#!" class="brand-logo">Qr Code</a>
         <ul class="right">
