--- a/templates/base_app.html.twig
+++ b/templates/base_app.html.twig
@@ -9,7 +9,7 @@
 
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width" />
   <meta name="description" content="Appdent is a app landing page. Where include 6+ landing page template.">
   <meta name="author" content="WowThemez">
   <title>App Permergas</title>
