--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -136,7 +136,7 @@
                             <li class="body">
                                 <ul class="user_dw_menu">
                                     <li>
-                                        <a href="{{path('perfil')}}">
+                                        <a href="{{path('clientes_perfil')}}">
                                             <i class="material-icons">person</i>Mi Cuenta
                                         </a>
                                     </li>
