bloques dashboard cliente

--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -30,32 +30,26 @@
                         <div class="icon m-b-10">
                           <i class="fa  fa-4x fa-star" aria-hidden="true"></i>
                         </div>
-                        <div class="text m-b-10">Clientes</div>
-                        <h3 class="m-b-0">{{clientes}}
-                        </h3>
-
+                        <div class="text m-b-10">Comprobantes reportados</div>
+                        <h3 class="m-b-0">{{ comprobantesReportados }}</h3>
                     </div>
                 </div>
                 <div class="col-lg-4 col-sm-6">
                     <div class="support-box text-center purple">
                         <div class="icon m-b-10">
-                            <i class="fa  fa-4x fa-users" aria-hidden="true"></i>
+                            <i class="fa  fa-4x fa-file" aria-hidden="true"></i>
                         </div>
-                        <div class="text m-b-10">Auxiliares</div>
-                        <h3 class="m-b-0">{{auxiliares}}
-                        </h3>
-
+                        <div class="text m-b-10">Cuentas por cobrar</div>
+                        <h3 class="m-b-0">{{ cuentasPorCobrar }}</h3>
                     </div>
                 </div>
                 <div class="col-lg-4 col-sm-6">
                     <div class="support-box text-center blue">
                         <div class="icon m-b-10">
-                            <i class="fa  fa-4x fa-file" aria-hidden="true"></i>
+                            <i class="fa  fa-4x fa-users" aria-hidden="true"></i>
                         </div>
-                        <div class="text m-b-10">XML procesados</div>
-                        <h3 class="m-b-0">{{archivos}}
-                        </h3>
-
+                        <div class="text m-b-10">Empleados</div>
+                        <h3 class="m-b-0">{{ empleados }}</h3>
                     </div>
                 </div>
 
