feature: lista de iconos clientes y admin

--- a/templates/clientes/pagos.html.twig
+++ b/templates/clientes/pagos.html.twig
@@ -207,39 +207,35 @@
                           <i class="material-icons">remove_red_eye</i>
                         </a>
                         
-                        
-                         {% if is_granted('ROLE_CLIENTE') %}
 
-                         {% else %}
-                         
-                         {% if pago.revisado==1 %}
-                          <a href="{{path('pagos_cliente_revisado',{id:pago.id})}}" class="col-dark-gray waves-effect m-r-20" title="Activar Revisado">
-                          <i class="material-icons">done</i>
-                        </a> 
+                            {% if pago.tipopagoid==4 %}
+                             <a href="{{path('cuentas_por_cobrar_subir_archivos',{id:pago.id})}}" class="waves-effect m-r-20" title="Agregar XML">
+                              <i class="material-icons">add</i>
+                            </a> 
+                            {% else%}
+                             <a href="#" data-id="{{pago.id}}" class="waves-effect m-r-20 reportar_cuenta" title="Agregar Comprobante">
+                              <i class="material-icons">add</i>
+                             </a> 
+                             
 
-                          {% else %}
-                         {% if pago.tipopagoid==4 %}
-                         <a href="{{path('cuentas_por_cobrar_subir_archivos',{id:pago.id})}}" class="waves-effect m-r-20" title="agregar">
-                          <i class="material-icons">add</i>
-                        </a> 
-                        {% else%}
-                         <a href="#" data-id="{{pago.id}}" class="waves-effect m-r-20 reportar_cuenta" title="Editar">
-                          <i class="material-icons">attach_money</i>
-                         </a> 
-                        {% endif %}
-
+                            {% endif %}
                          <a href="#" data-id="{{pago.id}}" class="waves-effect m-r-20 editar" title="Editar">
                           <i class="material-icons">edit</i>
                          </a> 
-
-                           <a href="{{path('pagos_cliente_revisado',{id:pago.id})}}" class="col-dark-green  waves-effect m-r-20 revisado" title="Revisado" >  <i class="material-icons">done</i></a>
-
-                          <a data-id="{{pago.id}}" href="{{path('pagos_delete',{id:pago.id})}}" class="col-dark-gray waves-effect m-r-20 eliminar" title="Eliminar">
+                        
+                            <a data-id="{{pago.id}}" href="{{path('pagos_delete',{id:pago.id})}}" class="col-dark-gray waves-effect m-r-20 eliminar" title="Eliminar">
                             <i class="material-icons">delete_sweep</i>
                           </a>
-                         {% endif %}
+                      
+                         {% if is_granted('ROLE_CLIENTE') %}
+
+
+                         {% else %}
+                        
+                           <a href="{{path('pagos_cliente_revisado',{id:pago.id})}}" class="col-dark-green  waves-effect m-r-20 revisado" title="Revisado" >  <i class="material-icons">done</i></a>
 
                          {% endif %}
+
                         
                       </td>
                     </tr>
