cambio titulo login page

--- a/src/Resources/FOSUserBundle/views/layout.html.twig
+++ b/src/Resources/FOSUserBundle/views/layout.html.twig
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1" name="viewport" />
-    <title>Login Permergas</title>
+    <title>JMB Contadores</title>
     <!-- Favicon-->
     <link rel="icon" href="../../assets/images/favicon.ico" type="image/x-icon">
 
